--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Winky Rough", sans-serif;
+  font-family: 'Winky Rough', sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
