--- a/src/Explorer/FileExplorer.module.css
+++ b/src/Explorer/FileExplorer.module.css
@@ -13,10 +13,19 @@
   border-bottom: 1px solid #333;
   background-color: #252526;
 
+  & button {
+    outline: none;
+    background: none;
+    border: none;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+  }
+
   & svg {
     cursor: pointer;
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     stroke: #ccc;
     fill: #ccc;
     transition: all 0.2s ease;
