On click of  file name a tab should open in the editor and close icon behavior Fixes #13

--- a/src/components/Tab/components/Header/style.module.css
+++ b/src/components/Tab/components/Header/style.module.css
@@ -28,5 +28,11 @@
     & p {
       font-weight: 500;
     }
+
+    & button {
+      background: transparent;
+      border: none;
+      outline: none;
+    }
   }
 }
