--- a/src/Editor/style.module.css
+++ b/src/Editor/style.module.css
@@ -1,3 +1,5 @@
 .editor_container {
   height: 100%;
+  border-left: 1px solid #ccc;
+  /* color to be same as the color used by shubham for console border */
 }
