--- a/src/container/Container.module.css
+++ b/src/container/Container.module.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   flex: 2;
   border-bottom: 1px solid #1f1f1f;
+  overflow: hidden;
 
   & .left {
     flex: 1;
@@ -11,6 +12,8 @@
     border-top: none;
     border-bottom: none;
     background-color: #1e1e1e;
+    overflow-y: scroll;
+    height: 100%;
   }
 
   & .right {
