--- a/src/Explorer/components/Folder/Folder.module.css
+++ b/src/Explorer/components/Folder/Folder.module.css
@@ -9,6 +9,10 @@
   cursor: pointer;
   padding: 4px 8px;
   user-select: none;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 
   &:hover {
     background-color: #242424;
