--- a/src/components/ContextMenu/contextMenu.module.css
+++ b/src/components/ContextMenu/contextMenu.module.css
@@ -44,3 +44,9 @@
 .selected_options {
   box-shadow: rgba(100, 100, 111) 0px 0px 5px 0px;
 }
+
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  cursor: not-allowed;
+}
